--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@lynniemagoo/adafruit-gfx-library": "^1.1.0",
+    "@lynniemagoo/adafruit-st7735-library": "^1.0.2",
     "axios": "^1.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "mic": "^2.1.2",
+    "node-emoji": "^2.2.0",
     "node-lame": "^1.3.2",
     "tencentcloud-sdk-nodejs": "^4.1.16",
     "uuid": "^11.1.0",
