--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-lame": "^1.3.2",
     "tencentcloud-sdk-nodejs": "^4.1.16",
     "uuid": "^11.1.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "zlib": "^1.0.5"
   }
 }
