--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "lodash": "^4.17.21",
     "mic": "^2.1.2",
     "node-emoji": "^2.2.0",
     "node-lame": "^1.3.2",
