--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mp3-duration": "^1.1.0",
     "node-emoji": "^2.2.0",
     "node-lame": "^1.3.2",
+    "onoff": "^6.0.3",
     "openai": "^4.95.1",
     "tencentcloud-sdk-nodejs": "^4.1.16",
     "uuid": "^11.1.0",
