--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,5 @@ OPENAI_API_KEY=openai_api_key
 ASR_SERVER=TENCENT # TENCENT / VOLCENGINE / OPENAI
 LLM_SERVER=VOLCENGINE # VOLCENGINE / OPENAI
 TTS_SERVER=VOLCENGINE # TENCENT / VOLCENGINE / OPENAI
+
+# SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly and shortly, also with a smile.
