--- a/.env.template
+++ b/.env.template
@@ -21,4 +21,4 @@ ASR_SERVER=TENCENT # TENCENT / VOLCENGINE / OPENAI
 LLM_SERVER=VOLCENGINE # VOLCENGINE / OPENAI
 TTS_SERVER=VOLCENGINE # TENCENT / VOLCENGINE / OPENAI
 
-# SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly and shortly, also with a smile.
+# SYSTEM_PROMPT==You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
