--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 TENCENT_SECRET_ID=YourSecretId
 TENCENT_SECRET_KEY=YourSecretKey
 TENCENT_REGION=ap-guangzhou
-TENCENT_ENDPOINT=asr.tencentcloudapi.com
+TENCENT_ASR_ENDPOINT=asr.tencentcloudapi.com
 TENCENT_TTS_ENDPOINT=tts.tencentcloudapi.com
 
 # ByteDance VolcEngine
