update: readme and env template

--- a/.env.template
+++ b/.env.template
@@ -1,24 +1,29 @@
 # Tencent Cloud ASR
 TENCENT_SECRET_ID=YourSecretId
 TENCENT_SECRET_KEY=YourSecretKey
+
 TENCENT_REGION=ap-guangzhou
 TENCENT_ASR_ENDPOINT=asr.tencentcloudapi.com
 TENCENT_TTS_ENDPOINT=tts.tencentcloudapi.com
 
-# ByteDance VolcEngine
+# ByteDance VolcEngine ASR and TTS
 VOLCENGINE_APP_ID=volcengine_app_id
 VOLCENGINE_ACCESS_TOKEN=volcengine_access_token
-VOLCENGINE_SECRECT_KEY=volcengine_secrect_key
-VOLCENGINE_CLUSTER=volcengine_input_common
-# Doubao LLM
+# ByteDance Doubao LLM
 VOLCENGINE_DOUBAO_ACCESS_TOKEN=doubao_access_token
 
+VOLCENGINE_CLUSTER=volcengine_input_common
 
 # OpenAI
 OPENAI_API_KEY=openai_api_key
 
-ASR_SERVER=TENCENT # TENCENT / VOLCENGINE / OPENAI
-LLM_SERVER=VOLCENGINE # VOLCENGINE / OPENAI
-TTS_SERVER=VOLCENGINE # TENCENT / VOLCENGINE / OPENAI
+# TENCENT / VOLCENGINE / OPENAI
+ASR_SERVER=TENCENT 
+
+# VOLCENGINE / OPENAI
+LLM_SERVER=VOLCENGINE 
+
+# TENCENT / VOLCENGINE / OPENAI
+TTS_SERVER=VOLCENGINE
 
 # SYSTEM_PROMPT==You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
