feat: voice type

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,7 @@ VOLCENGINE_APP_ID=volcengine_app_id
 VOLCENGINE_ACCESS_TOKEN=volcengine_access_token
 # ByteDance Doubao LLM
 VOLCENGINE_DOUBAO_ACCESS_TOKEN=doubao_access_token
+VOLCENGINE_VOICE_TYPE=zh_female_wanwanxiaohe_moon_bigtts
 
 VOLCENGINE_CLUSTER=volcengine_input_common
 
