chore: env command

--- a/.env.template
+++ b/.env.template
@@ -18,7 +18,7 @@ VOLCENGINE_CLUSTER=volcengine_input_common
 
 # OpenAI
 OPENAI_API_KEY=openai_api_key
-OPENAI_API_BASE_URL=https://api.openai.com/v2
+# OPENAI_API_BASE_URL=https://api.openai.com/v2
 
 # TENCENT / VOLCENGINE / OPENAI
 ASR_SERVER=TENCENT 
