feat: add tools for llm

--- a/.env.template
+++ b/.env.template
@@ -13,12 +13,13 @@ VOLCENGINE_ACCESS_TOKEN=volcengine_access_token
 VOLCENGINE_DOUBAO_ACCESS_TOKEN=
 # https://www.volcengine.com/docs/6561/1257544
 VOLCENGINE_VOICE_TYPE=zh_female_wanwanxiaohe_moon_bigtts
+VOLCENGINE_DOUBAO_LLM_MODEL=doubao-1-5-lite-32k-250115
 
-VOLCENGINE_CLUSTER=volcengine_input_common
 
 # OpenAI
 OPENAI_API_KEY=openai_api_key
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
+#OPENAI_LLM_MODEL=gpt-4o
 
 # TENCENT / VOLCENGINE / OPENAI
 ASR_SERVER=TENCENT 
@@ -29,4 +30,4 @@ LLM_SERVER=VOLCENGINE
 # TENCENT / VOLCENGINE / OPENAI
 TTS_SERVER=VOLCENGINE
 
-# SYSTEM_PROMPT==You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
+# SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
