chore: update README

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,6 @@
-# Tencent Cloud ASR
+# Tencent Cloud ASR and TTS
 TENCENT_SECRET_ID=YourSecretId
 TENCENT_SECRET_KEY=YourSecretKey
-
 TENCENT_REGION=ap-guangzhou
 TENCENT_ASR_ENDPOINT=asr.tencentcloudapi.com
 TENCENT_TTS_ENDPOINT=tts.tencentcloudapi.com
