feat: auto reset chat history in 5 min

--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,9 @@ LLM_SERVER=VOLCENGINE
 # options: TENCENT, VOLCENGINE, OPENAI
 TTS_SERVER=VOLCENGINE
 
+# specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
+# CHAT_HISTORY_RESET_TIME=300
+
 
 ## Tencent Cloud ASR and TTS
 # if you are using tencent cloud as ASR or TTS server, please set the following environment variables
@@ -39,6 +42,8 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 OLLAMA_ENDPOINT=http://localhost:11434
 # the default model is deepseek-r1:1.5b, you can also choose other models, please refer to: https://ollama.com/library
 # OLLAMA_MODEL=deepseek-r1:1.5b
+# if you want to enable tools for ollama, uncomment the following line:
+# OLLAMA_ENABLE_TOOLS=true
 
 ## OpenAI
 # if you are using openai as ASR、TTS or LLM server, please set the following environment variables
