fix: llm thinking

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,9 @@ TTS_SERVER=VOLCENGINE
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
 
+# enable or disable thinking of LLM
+ENABLE_THINKING=true
+
 
 ## Tencent Cloud ASR and TTS
 # if you are using tencent cloud as ASR or TTS server, please set the following environment variables
