--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,8 @@ TTS_SERVER=VOLCENGINE
 # CHAT_HISTORY_RESET_TIME=300
 
 # enable or disable thinking of LLM
+# if you are using ollama as LLM server, please confirm that the model supports thinking before enabling this option
+# otherwise the ollama will return a 400 error
 ENABLE_THINKING=true
 
 
@@ -45,7 +47,7 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 OLLAMA_ENDPOINT=http://localhost:11434
 # the default model is deepseek-r1:1.5b, you can also choose other models, please refer to: https://ollama.com/library
 # OLLAMA_MODEL=deepseek-r1:1.5b
-# if you want to enable tools for ollama, uncomment the following line:
+# if you want to enable tools for ollama, uncomment the following line (make sure the model supports tools, otherwise it will return a 400 error):
 # OLLAMA_ENABLE_TOOLS=true
 
 ## OpenAI
