feat: google gemini

--- a/.env.template
+++ b/.env.template
@@ -42,6 +42,12 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 # the default model is doubao-1-5-lite-16k-250115, you can also choose other models
 # VOLCENGINE_DOUBAO_LLM_MODEL=doubao-1-5-lite-32k-250115
 
+## Google Gemini
+# if you are using google gemini as LLM server, please set the following environment variables
+GOOGLE_GEMINI_API_KEY=your_api_key
+# the default model is gemini-1.5-flash, you can also choose other models
+# GOOGLE_GEMINI_MODEL=gemini-1.5-flash
+
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
 OLLAMA_ENDPOINT=http://localhost:11434
