--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "https-proxy-agent": "^7.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mp3-duration": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "openai": "^5.12.2",
+    "socks-proxy-agent": "^8.0.5",
     "tencentcloud-sdk-nodejs": "^4.1.16",
     "uuid": "^11.1.0",
     "ws": "^8.18.1",
