feat: proxy setting

--- a/.env.template
+++ b/.env.template
@@ -63,7 +63,12 @@ OPENAI_API_KEY=openai_api_key
 # OPENAI_LLM_MODEL=gpt-4o
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
+# proxy settings for OpenAI， uncomment the following lines if you need to use a proxy to access OpenAI services
+# HTTPS_PROXY=https://your_https_proxy
+# HTTP_PROXY=http://your_http_proxy
+# ALL_PROXY=socks5://your_socks_proxy
 
 ## Custom System Prompt
 # you can set a custom system prompt for LLM, please uncomment the following line and set your own prompt
 # SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
+
