--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,12 @@
 # specify the ASR、LLM and TTS server to use
-# options: TENCENT, VOLCENGINE, OPENAI
-ASR_SERVER=TENCENT 
+# options: OPENAI, TENCENT, VOLCENGINE
+ASR_SERVER=OPENAI 
 
-# options: VOLCENGINE, OPENAI, OLLAMA
-LLM_SERVER=VOLCENGINE 
+# options: OPENAI, VOLCENGINE, OLLAMA
+LLM_SERVER=OPENAI 
 
-# options: TENCENT, VOLCENGINE, OPENAI
-TTS_SERVER=VOLCENGINE
+# options: OPENAI, TENCENT, VOLCENGINE
+TTS_SERVER=OPENAI
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
@@ -63,6 +63,7 @@ OPENAI_API_KEY=openai_api_key
 # OPENAI_LLM_MODEL=gpt-4o
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
+
 # proxy settings for OpenAI， uncomment the following lines if you need to use a proxy to access OpenAI services
 # HTTPS_PROXY=https://your_https_proxy
 # HTTP_PROXY=http://your_http_proxy
