--- a/.env.template
+++ b/.env.template
@@ -43,10 +43,16 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 # VOLCENGINE_DOUBAO_LLM_MODEL=doubao-1-5-lite-32k-250115
 
 ## Google Gemini
-# if you are using google gemini as LLM server, please set the following environment variables
+# if you are using google gemini as ASR / LLM / TTS server, please set the following environment variables
 GOOGLE_GEMINI_API_KEY=your_api_key
-# the default model is gemini-1.5-flash, you can also choose other models
+# the default model is gemini-1.5-flash (for ASR and LLM), you can also choose other models
 # GOOGLE_GEMINI_MODEL=gemini-1.5-flash
+# for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
+# GOOGLE_GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
+# the default speaker is "Callirhoe", you can also choose other speakers, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
+# GOOGLE_GEMINI_TTS_SPEAKER=Callirhoe
+# the default language code is "en-US", you can also choose other language codes
+# GEMINI_TTS_LANGUAGE_CODE=en-US
 
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
