feat: gemini support proxy

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 # specify the ASR、LLM and TTS server to use
-# options: OPENAI, TENCENT, VOLCENGINE
+# options: OPENAI, GEMINI, TENCENT, VOLCENGINE
 ASR_SERVER=OPENAI 
 
-# options: OPENAI, VOLCENGINE, OLLAMA
+# options: OPENAI, GEMINI, VOLCENGINE, OLLAMA
 LLM_SERVER=OPENAI 
 
-# options: OPENAI, TENCENT, VOLCENGINE
+# options: OPENAI, GEMINI, TENCENT, VOLCENGINE
 TTS_SERVER=OPENAI
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
@@ -44,13 +44,13 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 
 ## Google Gemini
 # if you are using google gemini as ASR / LLM / TTS server, please set the following environment variables
-GOOGLE_GEMINI_API_KEY=your_api_key
+GEMINI_API_KEY=your_api_key
 # the default model is gemini-1.5-flash (for ASR and LLM), you can also choose other models
-# GOOGLE_GEMINI_MODEL=gemini-1.5-flash
+# GEMINI_MODEL=gemini-1.5-flash
 # for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
-# GOOGLE_GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
+# GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
 # the default speaker is "Callirhoe", you can also choose other speakers, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
-# GOOGLE_GEMINI_TTS_SPEAKER=Callirhoe
+# GEMINI_TTS_SPEAKER=Callirhoe
 # the default language code is "en-US", you can also choose other language codes
 # GEMINI_TTS_LANGUAGE_CODE=en-US
 
@@ -70,7 +70,7 @@ OPENAI_API_KEY=openai_api_key
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
 
-# proxy settings for OpenAI， uncomment the following lines if you need to use a proxy to access OpenAI services
+# proxy settings for OpenAI or GEMINI, uncomment the following lines if you need to use a proxy to access OpenAI or GEMINI services
 # HTTPS_PROXY=https://your_https_proxy
 # HTTP_PROXY=http://your_http_proxy
 # ALL_PROXY=socks5://your_socks_proxy
