feat: gemini tts use wav player

--- a/.env.template
+++ b/.env.template
@@ -47,11 +47,11 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 GEMINI_API_KEY=your_api_key
 # the default model is gemini-1.5-flash (for ASR and LLM), you can also choose other models
 # GEMINI_MODEL=gemini-1.5-flash
-# for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
+# for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://ai.google.dev/gemini-api/docs/speech-generation
 # GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
-# the default speaker is "Callirhoe", you can also choose other speakers, please refer to: https://cloud.google.com/text-to-speech/docs/gemini-tts
-# GEMINI_TTS_SPEAKER=Callirhoe
-# the default language code is "en-US", you can also choose other language codes
+# the default speaker is "Zephyr", you can also choose other speakers, please refer to:https://ai.google.dev/gemini-api/docs/speech-generation#voices
+# GEMINI_TTS_SPEAKER=Zephyr
+# the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
 
 ## Ollama
