--- a/.env.template
+++ b/.env.template
@@ -49,8 +49,8 @@ GEMINI_API_KEY=your_api_key
 # GEMINI_MODEL=gemini-1.5-flash
 # for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://ai.google.dev/gemini-api/docs/speech-generation
 # GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
-# the default speaker is "Callirhoe", you can also choose other speakers, please refer to:https://ai.google.dev/gemini-api/docs/speech-generation#voices
-# GEMINI_TTS_SPEAKER=Callirhoe
+# the default speaker is "Callirrhoe", you can also choose other speakers, please refer to:https://ai.google.dev/gemini-api/docs/speech-generation#voices
+# GEMINI_TTS_SPEAKER=Callirrhoe
 # the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
 
