--- a/.env.template
+++ b/.env.template
@@ -44,6 +44,9 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 
 ## Google Gemini
 # if you are using google gemini as ASR / LLM / TTS server, please set the following environment variables
+# Google Cloud has 300$ free credit for new users, you can use it to try the gemini api
+# get your API key from https://console.cloud.google.com/apis/credentials, and make sure to enable the Generative Language API for your project
+# also ensure the API key has the permission to access the Generative Language API
 GEMINI_API_KEY=your_api_key
 # the default model is gemini-1.5-flash (for ASR and LLM), you can also choose other models
 # GEMINI_MODEL=gemini-1.5-flash
@@ -53,6 +56,13 @@ GEMINI_API_KEY=your_api_key
 # GEMINI_TTS_SPEAKER=Callirrhoe
 # the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
+
+## Proxy Settings
+# proxy settings for OpenAI or GEMINI, uncomment the following lines if you need to use a proxy to access OpenAI or GEMINI services
+# usually you only need to set HTTPS_PROXY
+# HTTPS_PROXY=https://your_https_proxy
+# HTTP_PROXY=http://your_http_proxy
+# ALL_PROXY=socks5://your_socks_proxy
 
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
@@ -69,11 +79,6 @@ OPENAI_API_KEY=openai_api_key
 # OPENAI_LLM_MODEL=gpt-4o
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
-
-# proxy settings for OpenAI or GEMINI, uncomment the following lines if you need to use a proxy to access OpenAI or GEMINI services
-# HTTPS_PROXY=https://your_https_proxy
-# HTTP_PROXY=http://your_http_proxy
-# ALL_PROXY=socks5://your_socks_proxy
 
 ## Custom System Prompt
 # you can set a custom system prompt for LLM, please uncomment the following line and set your own prompt
