feat: support piper tts

--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ ASR_SERVER=OPENAI
 # options: OPENAI, GEMINI, VOLCENGINE, OLLAMA
 LLM_SERVER=OPENAI 
 
-# options: OPENAI, GEMINI, TENCENT, VOLCENGINE
+# options: OPENAI, GEMINI, TENCENT, VOLCENGINE, PIPER
 TTS_SERVER=OPENAI
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
@@ -84,3 +84,11 @@ OPENAI_API_KEY=openai_api_key
 # you can set a custom system prompt for LLM, please uncomment the following line and set your own prompt
 # SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
 
+## Piper TTS
+# if you are using piper as TTS server, please set the following environment variables
+# Piper is an open-source TTS engine that can run locally on your device
+# You can download Piper binaries for RPi from: https://github.com/OHF-Voice/piper1-gpl/blob/387ca06bfd0e7557c6d0d54ce34d36e7bb28389a/docs/CLI.md
+# Voice models can be found at: https://rhasspy.github.io/piper-samples/
+#
+# PIPER_BINARY_PATH=/path/to/piper-binary
+# PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
