--- a/.env.template
+++ b/.env.template
@@ -89,6 +89,12 @@ OPENAI_API_KEY=openai_api_key
 # Piper is an open-source TTS engine that can run locally on your device
 # You can download Piper binaries for RPi from: https://github.com/OHF-Voice/piper1-gpl/blob/387ca06bfd0e7557c6d0d54ce34d36e7bb28389a/docs/CLI.md
 # Voice models can be found at: https://rhasspy.github.io/piper-samples/
-#
-# PIPER_BINARY_PATH=/path/to/piper-binary
-# PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
+PIPER_BINARY_PATH=/path/to/piper-binary
+PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
+
+## Vosk ASR
+# if you are using vosk as ASR server, please set the following environment variables
+# Vosk is an open-source ASR engine that can run locally on your device
+# You can download Vosk binaries and models from: https://alphacephei.com/vosk/models
+# unzip the model to a folder and set the path below
+VOSK_MODEL_PATH=/path/to/vosk/model
