--- a/.env.template
+++ b/.env.template
@@ -58,7 +58,7 @@ GEMINI_API_KEY=your_api_key
 # GEMINI_TTS_LANGUAGE_CODE=en-US
 
 ## Proxy Settings
-# proxy settings for OpenAI or GEMINI, uncomment the following lines if you need to use a proxy to access OpenAI or GEMINI services
+# proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
 # usually you only need to set HTTPS_PROXY
 # HTTPS_PROXY=https://your_https_proxy
 # HTTP_PROXY=http://your_http_proxy
