--- a/.env.template
+++ b/.env.template
@@ -71,6 +71,8 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # OLLAMA_MODEL=deepseek-r1:1.5b
 # if you want to enable tools for ollama, uncomment the following line (make sure the model supports tools, otherwise it will return a 400 error):
 # OLLAMA_ENABLE_TOOLS=true
+# if the ollama server is running on the same device, you can choose to serve ollama automatically when starting the chatbot, uncomment the following line:
+# SERVE_OLLAMA=true
 
 ## OpenAI
 # if you are using openai as ASR、TTS or LLM server, please set the following environment variables
