--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,9 @@ TTS_SERVER=OPENAI
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
 
+# if you want to clean the data folder on each start, set the following environment variable to true
+# CLEAN_DATA_FOLDER_ON_START=true
+
 # enable or disable thinking of LLM
 # if you are using ollama as LLM server, please confirm that the model supports thinking before enabling this option
 # otherwise the ollama will return a 400 error
