feat: whisper asr

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 # specify the ASR、LLM and TTS server to use
-# options: OPENAI, GEMINI, TENCENT, VOLCENGINE
+# options: OPENAI, GEMINI, TENCENT, VOLCENGINE, WHISPER, VOSK
 ASR_SERVER=OPENAI 
 
 # options: OPENAI, GEMINI, VOLCENGINE, OLLAMA
@@ -103,3 +103,12 @@ PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
 # You can download Vosk binaries and models from: https://alphacephei.com/vosk/models
 # unzip the model to a folder and set the path below
 VOSK_MODEL_PATH=/path/to/vosk/model
+
+## Whisper ASR
+# if you are using whisper as ASR server, please set the following environment variables
+# Whisper is an open-source ASR engine that can run locally on your device
+# https://github.com/openai/whisper
+# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. The tiny model will take ~1GB of VRAM
+WHISPER_MODEL_SIZE=tiny
+# the default language is English, if you leave it empty, whisper will try to detect the language automatically
+# WHISPER_LANGUAGE=English
