feat: gemini image generation tool

--- a/.env.template
+++ b/.env.template
@@ -60,6 +60,12 @@ GEMINI_API_KEY=your_api_key
 # the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
 
+## Gemini Image Generation
+# for image generation, the default model is "gemini-2.5-flash-image", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/image-generation
+# if you specify this model and the GEMINI_API_KEY, the image generation tool will be enabled automatically for LLM
+# GEMINI_IMAGE_MODEL=gemini-2.5-flash-image
+
+
 ## Proxy Settings
 # proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
 # usually you only need to set HTTPS_PROXY
