feat: image generation support doubao

--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,10 @@ LLM_SERVER=OPENAI
 # options: OPENAI, GEMINI, TENCENT, VOLCENGINE, PIPER
 TTS_SERVER=OPENAI
 
+# specify the image generation server to use, the generated images will be saved in the data/images folder
+# options: GEMINI, VOLCENGINE
+IMAGE_GENERATION_SERVER=GEMINI
+
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
 
@@ -44,9 +48,11 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 
 # the default model is doubao-1-5-lite-16k-250115, you can also choose other models
 # VOLCENGINE_DOUBAO_LLM_MODEL=doubao-1-5-lite-32k-250115
+# for image generation, the default model is doubao-seedream-3-0-t2i-250415, you can also choose other models
+# VOLCENGINE_DOUBAO_IMAGE_MODEL=doubao-seedream-3-0-t2i-250415
 
 ## Google Gemini
-# if you are using google gemini as ASR / LLM / TTS server, please set the following environment variables
+# if you are using google gemini as ASR / LLM / TTS / IMAGE_GENERATION server, please set the following environment variables
 # Google Cloud has 300$ free credit for new users, you can use it to try the gemini api
 # get your API key from https://console.cloud.google.com/apis/credentials, and make sure to enable the Generative Language API for your project
 # also ensure the API key has the permission to access the Generative Language API
@@ -62,8 +68,7 @@ GEMINI_API_KEY=your_api_key
 
 ## Gemini Image Generation
 # for image generation, the default model is "gemini-2.5-flash-image", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/image-generation
-# if you specify this model and the GEMINI_API_KEY, the image generation tool will be enabled automatically for LLM
-# GEMINI_IMAGE_MODEL=gemini-2.5-flash-image
+GEMINI_IMAGE_MODEL=gemini-2.5-flash-image
 
 
 ## Proxy Settings
