--- a/.env.template
+++ b/.env.template
@@ -9,8 +9,8 @@ LLM_SERVER=OPENAI
 TTS_SERVER=OPENAI
 
 # specify the image generation server to use, the generated images will be saved in the data/images folder
-# options: GEMINI, VOLCENGINE
-IMAGE_GENERATION_SERVER=GEMINI
+# options: OPENAI, GEMINI, VOLCENGINE
+IMAGE_GENERATION_SERVER=OPENAI
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
@@ -70,13 +70,16 @@ GEMINI_API_KEY=your_api_key
 # for image generation, the default model is "gemini-2.5-flash-image", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/image-generation
 GEMINI_IMAGE_MODEL=gemini-2.5-flash-image
 
-
-## Proxy Settings
-# proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
-# usually you only need to set HTTPS_PROXY
-# HTTPS_PROXY=https://your_https_proxy
-# HTTP_PROXY=http://your_http_proxy
-# ALL_PROXY=socks5://your_socks_proxy
+## OpenAI
+# if you are using openai as ASR、TTS or LLM server, please set the following environment variables
+OPENAI_API_KEY=openai_api_key
+# the default model is gpt-4o, you can also choose other models
+# OPENAI_LLM_MODEL=gpt-4o
+# if you are using other openai compatible api server, please set the following environment variables
+# OPENAI_API_BASE_URL=https://api.openai.com/v2
+# if you are using openai as image generation server, please specify the generation model below. The default model is "gpt-image-1".
+# Document link: https://platform.openai.com/docs/guides/image-generation
+OPENAI_IMAGE_MODEL=gpt-image-1
 
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
@@ -88,17 +91,16 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # if the ollama server is running on the same device, you can choose to serve ollama automatically when starting the chatbot, uncomment the following line:
 # SERVE_OLLAMA=true
 
-## OpenAI
-# if you are using openai as ASR、TTS or LLM server, please set the following environment variables
-OPENAI_API_KEY=openai_api_key
-# the default model is gpt-4o, you can also choose other models
-# OPENAI_LLM_MODEL=gpt-4o
-# if you are using other openai compatible api server, please set the following environment variables
-# OPENAI_API_BASE_URL=https://api.openai.com/v2
+## Proxy Settings
+# proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
+# usually you only need to set HTTPS_PROXY
+# HTTPS_PROXY=https://your_https_proxy
+# HTTP_PROXY=http://your_http_proxy
+# ALL_PROXY=socks5://your_socks_proxy
 
 ## Custom System Prompt
 # you can set a custom system prompt for LLM, please uncomment the following line and set your own prompt
-# SYSTEM_PROMPT=You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor.
+# SYSTEM_PROMPT="You are a happy girl and also a helpful assistant. Answer the question quickly in less than 5 sentences, also with a sense of humor."
 
 ## Piper TTS
 # if you are using piper as TTS server, please set the following environment variables
