--- a/.env.template
+++ b/.env.template
@@ -77,9 +77,10 @@ OPENAI_API_KEY=openai_api_key
 # OPENAI_LLM_MODEL=gpt-4o
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
-# if you are using openai as image generation server, please specify the generation model below. The default model is "gpt-image-1".
+# if you are using openai as image generation server, please specify the generation model below. The default model is "dall-e-3"
+# if you want to use "gpt-image-1", your organization need to be verified by openai first.
 # Document link: https://platform.openai.com/docs/guides/image-generation
-OPENAI_IMAGE_MODEL=gpt-image-1
+OPENAI_IMAGE_MODEL=dall-e-3
 
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
