--- a/.env.template
+++ b/.env.template
@@ -126,3 +126,8 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically
 # WHISPER_LANGUAGE=English
+
+
+## Pi Camera
+# if you want to enable the Pi Camera for image capture (double click the button in idle status to enter) uncomment the following line:
+# ENABLE_CAMERA=true
