feat: add vision server

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,13 @@ TTS_SERVER=OPENAI
 # options: OPENAI, GEMINI, VOLCENGINE
 IMAGE_GENERATION_SERVER=OPENAI
 
+# specify the vision model for image understanding tasks
+# VISION_SERVER=OLLAMA
+
+## Pi Camera
+# if you want to enable the Pi Camera for image capture (double click the button in idle status to enter) uncomment the following line:
+# ENABLE_CAMERA=true
+
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
 
@@ -91,6 +98,9 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # OLLAMA_ENABLE_TOOLS=true
 # if the ollama server is running on the same device, you can choose to serve ollama automatically when starting the chatbot, uncomment the following line:
 # SERVE_OLLAMA=true
+# if you are using ollama as VISION_SERVER, specify the vision model for ollama image understanding tasks, default is qwen3-vl:2b
+# please refer to https://ollama.com/library for more details
+# OLLAMA_VISION_MODEL=qwen3-vl:2b
 
 ## Proxy Settings
 # proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
@@ -126,8 +136,3 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically
 # WHISPER_LANGUAGE=English
-
-
-## Pi Camera
-# if you want to enable the Pi Camera for image capture (double click the button in idle status to enter) uncomment the following line:
-# ENABLE_CAMERA=true
