feat: grok support

--- a/.env.template
+++ b/.env.template
@@ -1,19 +1,19 @@
 # specify the ASR、LLM and TTS server to use
-# options: OPENAI, GEMINI, TENCENT, VOLCENGINE, WHISPER, VOSK
-ASR_SERVER=OPENAI 
+# options: openai, gemini, tencent, volcengine, whisper, vosk
+ASR_SERVER=openai 
 
-# options: OPENAI, GEMINI, VOLCENGINE, OLLAMA
-LLM_SERVER=OPENAI 
+# options: openai, gemini, grok, volcengine, ollama
+LLM_SERVER=openai 
 
-# options: OPENAI, GEMINI, TENCENT, VOLCENGINE, PIPER
-TTS_SERVER=OPENAI
+# options: openai, gemini, tencent, volcengine, piper
+TTS_SERVER=openai
 
 # specify the image generation server to use, the generated images will be saved in the data/images folder
-# options: OPENAI, GEMINI, VOLCENGINE
-IMAGE_GENERATION_SERVER=OPENAI
+# options: openai, gemini, volcengine
+IMAGE_GENERATION_SERVER=openai
 
 # specify the vision model for image understanding tasks
-# VISION_SERVER=OLLAMA
+# VISION_SERVER=ollama
 
 ## Pi Camera
 # if you want to enable the Pi Camera for image capture (double click the button in idle status to enter) uncomment the following line:
@@ -88,6 +88,12 @@ OPENAI_API_KEY=openai_api_key
 # if you want to use "gpt-image-1", your organization need to be verified by openai first.
 # Document link: https://platform.openai.com/docs/guides/image-generation
 OPENAI_IMAGE_MODEL=dall-e-3
+
+## Grok
+# if you are using grok as LLM server, please set the following environment variables
+GROK_API_KEY=your_grok_api_key
+# the default model is grok-4-latest
+# GROK_LLM_MODEL=grok-4-latest
 
 ## Ollama
 # if you are using ollama as LLM server, please set the following environment variables
