refactor: image and vision api

--- a/.env.template
+++ b/.env.template
@@ -55,8 +55,10 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 
 # the default model is doubao-1-5-lite-16k-250115, you can also choose other models
 # VOLCENGINE_DOUBAO_LLM_MODEL=doubao-1-5-lite-32k-250115
-# for image generation, the default model is doubao-seedream-3-0-t2i-250415, you can also choose other models
+# for image generation, the default model is doubao-seedream-3-0-t2i-250415, you can also choose other models. If you need image input support, please choose 'doubao-seededit-3-0-i2i-250628'
 # VOLCENGINE_DOUBAO_IMAGE_MODEL=doubao-seedream-3-0-t2i-250415
+# for vision tasks, the default model is doubao-seed-1-6-flash-250828, you can also choose other models
+# VOLCENGINE_DOUBAO_VISION_MODEL=doubao-seed-1-6-flash-250828
 
 ## Google Gemini
 # if you are using google gemini as ASR / LLM / TTS / IMAGE_GENERATION server, please set the following environment variables
@@ -72,6 +74,8 @@ GEMINI_API_KEY=your_api_key
 # GEMINI_TTS_SPEAKER=Callirrhoe
 # the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
+# for vision tasks, the default model is "gemini-1.5-flash", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/vision. If not set, the default model will be the same as GEMINI_MODEL
+# GEMINI_VISION_MODEL=gemini-1.5-flash
 
 ## Gemini Image Generation
 # for image generation, the default model is "gemini-2.5-flash-image", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/image-generation
@@ -84,10 +88,12 @@ OPENAI_API_KEY=openai_api_key
 # OPENAI_LLM_MODEL=gpt-4o
 # if you are using other openai compatible api server, please set the following environment variables
 # OPENAI_API_BASE_URL=https://api.openai.com/v2
-# if you are using openai as image generation server, please specify the generation model below. The default model is "dall-e-3"
-# if you want to use "gpt-image-1", your organization need to be verified by openai first.
+# if you are using openai as image generation server, please specify the generation model below. The default model is "dall-e-3". if you want to use "gpt-image-1", your organization need to be verified by openai first.
 # Document link: https://platform.openai.com/docs/guides/image-generation
+# if you need image input support, please choose models other than "dall-e-3" / "dall-e-2", such as "gpt-image-1", please refer to https://platform.openai.com/docs/guides/images-vision
 OPENAI_IMAGE_MODEL=dall-e-3
+# if you are using openai as VISION_SERVER, specify the vision model for openai image understanding tasks, if not set, the default model will be the same as OPENAI_LLM_MODEL model
+# OPENAI_VISION_MODEL=gpt-4o
 
 ## Grok
 # if you are using grok as LLM server, please set the following environment variables
@@ -140,5 +146,5 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 # https://github.com/openai/whisper
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. The tiny model will take ~1GB of VRAM
 WHISPER_MODEL_SIZE=tiny
-# the default language is English, if you leave it empty, whisper will try to detect the language automatically
+# the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 # WHISPER_LANGUAGE=English
