feat: env template

--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ TTS_SERVER=openai
 IMAGE_GENERATION_SERVER=openai
 
 # specify the vision model for image understanding tasks
+# options: openai, gemini, volcengine, ollama
 # VISION_SERVER=ollama
 
 ## Pi Camera
