--- a/.env.template
+++ b/.env.template
@@ -67,16 +67,16 @@ VOLCENGINE_DOUBAO_ACCESS_TOKEN=volcengine_doubao_access_token
 # get your API key from https://console.cloud.google.com/apis/credentials, and make sure to enable the Generative Language API for your project
 # also ensure the API key has the permission to access the Generative Language API
 GEMINI_API_KEY=your_api_key
-# the default model is gemini-1.5-flash (for ASR and LLM), you can also choose other models
-# GEMINI_MODEL=gemini-1.5-flash
+# the default model is gemini-2.5-flash (for ASR and LLM), you can also choose other models
+# GEMINI_MODEL=gemini-2.5-flash
 # for TTS, the default voice is "gemini-2.5-pro-preview-tts", you can also choose other voices, please refer to: https://ai.google.dev/gemini-api/docs/speech-generation
 # GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
 # the default speaker is "Callirrhoe", you can also choose other speakers, please refer to:https://ai.google.dev/gemini-api/docs/speech-generation#voices
 # GEMINI_TTS_SPEAKER=Callirrhoe
 # the default language code is "en-US", you can also choose other language codes, please refer to https://ai.google.dev/gemini-api/docs/speech-generation#languages
 # GEMINI_TTS_LANGUAGE_CODE=en-US
-# for vision tasks, the default model is "gemini-1.5-flash", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/vision. If not set, the default model will be the same as GEMINI_MODEL
-# GEMINI_VISION_MODEL=gemini-1.5-flash
+# for vision tasks, the default model is "gemini-2.5-flash", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/vision.
+# GEMINI_VISION_MODEL=gemini-2.5-flash
 
 ## Gemini Image Generation
 # for image generation, the default model is "gemini-2.5-flash-image", you can also choose other models, please refer to: https://ai.google.dev/gemini-api/docs/image-generation
