fix: sound card index

--- a/.env.template
+++ b/.env.template
@@ -43,7 +43,7 @@ TENCENT_SECRET_KEY=YourSecretKey
 ## ByteDance VolcEngine ASR and TTS
 
 # if you are using volcengine as ASR or TTS server, please set the following environment variables
-# VOLCENGINE_APP_ID=volcengine_app_id
+VOLCENGINE_ACCESS_TOKEN=volcengine_app_id
 VOLCENGINE_ACCESS_TOKEN=volcengine_access_token
 
 # You can choose different voice types and LLM models, please refer to the official documentation for more details:
