--- a/.env.template
+++ b/.env.template
@@ -149,3 +149,6 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 # WHISPER_LANGUAGE=English
+
+## Custom font for displaying text on screen
+# CUSTOM_FONT_PATH=/path/to/your/font.ttf
