feat: llm8850 env params

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 # specify the ASR、LLM and TTS server to use
-# options: openai, gemini, tencent, volcengine, whisper, vosk
+# options: openai, gemini, tencent, volcengine, whisper, vosk, llm8850whisper
 ASR_SERVER=openai
 
-# options: openai, gemini, grok, volcengine, ollama
+# options: openai, gemini, grok, volcengine, ollama, llm8850
 LLM_SERVER=openai
 
-# options: openai, gemini, tencent, volcengine, piper
+# options: openai, gemini, tencent, volcengine, piper, llm8850melotts
 TTS_SERVER=openai
 
 # specify the image generation server to use, the generated images will be saved in the data/images folder
@@ -149,6 +149,17 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 # WHISPER_LANGUAGE=English
+
+## LLM8850
+# if you are using LLM8850 as ASR / LLM / TTS server, you can specify the following environment variables
+# for more details about these services, please refer to: 
+# https://github.com/PiSugar/whisper.axcl
+# https://github.com/PiSugar/melotts.axcl
+# https://docs.m5stack.com/en/guide/ai_accelerator/llm-8850/m5_llm_8850_qwen3_1.7b
+LLM8850_LLM_HOST=http://localhost:8000
+LLM8850_LLM_TEMPERATURE=0.7
+LLM8850_WHISPER_HOST=http://localhost:8801
+LLM8850_MELOTTS_HOST=http://localhost:8802
 
 ## Custom font for displaying text on screen
 # CUSTOM_FONT_PATH=/path/to/your/font.ttf
