feat: env add INITIAL_VOLUME_LEVEL

--- a/.env.template
+++ b/.env.template
@@ -163,3 +163,8 @@ LLM8850_MELOTTS_HOST=http://localhost:8802
 
 ## Custom font for displaying text on screen
 # CUSTOM_FONT_PATH=/path/to/your/font.ttf
+
+## Initial Volume Level
+# specify the initial volume level (0-127) when the chatbot starts
+# value mapped to ALSA volume levels # 60% = 114  80% = 121  90% = 127
+# INITIAL_VOLUME_LEVEL=114
