feat: faster-whiper env

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 # specify the ASR、LLM and TTS server to use
-# options: openai, gemini, tencent, volcengine, whisper, vosk, llm8850whisper
+# options: openai, gemini, tencent, volcengine, whisper, vosk, llm8850whisper, faster-whisper
 ASR_SERVER=openai
 
 # options: openai, gemini, grok, volcengine, ollama, llm8850
 LLM_SERVER=openai
 
-# options: openai, gemini, tencent, volcengine, piper, llm8850melotts
+# options: openai, gemini, tencent, volcengine, piper, piper-http, llm8850melotts
 TTS_SERVER=openai
 
 # specify the image generation server to use, the generated images will be saved in the data/images folder
