feat: local service env

--- a/.env.template
+++ b/.env.template
@@ -134,6 +134,16 @@ OLLAMA_ENDPOINT=http://localhost:11434
 PIPER_BINARY_PATH=/path/to/piper-binary
 PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
 
+## Piper HTTP TTS
+# if you are using piper-http as TTS server, the server will be hosted at localhost:8805 by default
+# installation command: `python3 -m pip install piper-tts[http] --break-system-packages`
+# PIPER_HTTP_HOST=localhost
+# PIPER_HTTP_PORT=8805
+# specify the voice model to use, you should download it beforehand, use this command to download a model: `python3 -m piper.download_voices en_US-amy-medium`
+PIPER_HTTP_MODEL=en_US-amy-medium
+# specify the speech speed, default is 1
+PIPER_HTTP_LENGTH_SCALE=1
+
 ## Vosk ASR
 # if you are using vosk as ASR server, please set the following environment variables
 # Vosk is an open-source ASR engine that can run locally on your device
@@ -149,6 +159,23 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 # WHISPER_LANGUAGE=English
+# the default port for whisper ASR server is host at localhost:8804, you can change it if you are running remote whisper server
+# WHISPER_PORT=8804
+# WHISPER_HOST=localhost
+# the default request type is filePath, you can also choose "base64" to send audio data in base64 format, it should be set to "base64" if you are using remote whisper server
+# WHISPER_REQUEST_TYPE=filePath
+
+## Faster Whisper ASR
+# By default, faster-whisper ASR server will be hosted at localhost:8803, change the following environment variables if you are running the server at somewhere else.
+# FASTER_WHISPER_REQUEST_TYPE should be set to "base64" if you are using remote faster-whisper server.
+FASTER_WHISPER_PORT=8803
+FASTER_WHISPER_HOST=localhost
+# FASTER_WHISPER_REQUEST_TYPE=filePath
+# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. If you change the model size, it will download the model from HuggingFace automatically at the first use.
+FASTER_WHISPER_MODEL_SIZE=tiny
+# the default language is English, if you leave it empty, faster-whisper will try to detect the language automatically, but it will take more time.
+# FASTER_WHISPER_LANGUAGE=en
+
 
 ## LLM8850
 # if you are using LLM8850 as ASR / LLM / TTS server, you can specify the following environment variables
