feat: local service env

--- a/.env.template
+++ b/.env.template
@@ -141,7 +141,7 @@ PIPER_MODEL_PATH=/path/to/piper/voice/model.onnx
 # PIPER_HTTP_PORT=8805
 # specify the voice model to use, you should download it beforehand, use this command to download a model: `python3 -m piper.download_voices en_US-amy-medium`
 PIPER_HTTP_MODEL=en_US-amy-medium
-# specify the speech speed, default is 1
+# specify the speech speed, default is 1. The larger the value, the slower the speech.
 PIPER_HTTP_LENGTH_SCALE=1
 
 ## Vosk ASR
