feat: fast-whisper-cache

--- a/.env.template
+++ b/.env.template
@@ -172,9 +172,9 @@ FASTER_WHISPER_PORT=8803
 FASTER_WHISPER_HOST=localhost
 # FASTER_WHISPER_REQUEST_TYPE=filePath
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. If you change the model size, it will download the model from HuggingFace automatically at the first use.
-FASTER_WHISPER_MODEL_SIZE=tiny
-# preventing faster-whisper from downloading models from HuggingFace, the default is "true". If you change the model size, you need to set local_files_only to false and download the model for the first use.
-# FASTER_WHISPER_LOCAL_FILES_ONLY=false
+FASTER_WHISPER_MODEL_SIZE_OR_PATH=tiny
+# specify the folder to store the downloaded models, default is /home/pi/models
+FASTER_WHISPER_DOWNLOAD_ROOT=/home/pi/models
 # the default language is English, if you leave it empty, faster-whisper will try to detect the language automatically, but it will take more time.
 # FASTER_WHISPER_LANGUAGE=en
 
