feat: fast-whisper-cache

--- a/.env.template
+++ b/.env.template
@@ -171,10 +171,9 @@ WHISPER_MODEL_SIZE=tiny
 FASTER_WHISPER_PORT=8803
 FASTER_WHISPER_HOST=localhost
 # FASTER_WHISPER_REQUEST_TYPE=filePath
-# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. If you change the model size, it will download the model from HuggingFace automatically at the first use.
-FASTER_WHISPER_MODEL_SIZE_OR_PATH=tiny
-# specify the folder to store the downloaded models, default is /home/pi/models
-FASTER_WHISPER_DOWNLOAD_ROOT=/home/pi/models
+# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large.
+# or you can specify a local model directory path if you want it fully offline. (It will validate the model from huggingface if you just provide a size name)
+FASTER_WHISPER_MODEL_SIZE_OR_PATH=/path/to/your/faster-whisper-model-directory
 # the default language is English, if you leave it empty, faster-whisper will try to detect the language automatically, but it will take more time.
 # FASTER_WHISPER_LANGUAGE=en
 
